--- a/base.css
+++ b/base.css
@@ -6,7 +6,7 @@
 
 body {
     width: 800px;
-    background-color: aqua;
+    background-color: blanchedalmond;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
