--- a/header.css
+++ b/header.css
@@ -16,6 +16,7 @@
 			height: 200px;
 			width: 200px;
 			background-color: antiquewhite;
+			background-size: cover;
 			/* margin-left: 10px; */
 		}
 
@@ -24,6 +25,7 @@
 			height: 200px;
 			width: 560px;
 			background-color: antiquewhite;
+			background-size: cover;
 			margin-left: auto;
 			/* margin-right: 10px; */
 		}
