--- a/news.css
+++ b/news.css
@@ -1,30 +1,26 @@
 
+/* Newsについてのデザイン */
+.secNews {
+    display: none;
+    /* display: flex;
+    flex-wrap: wrap; */
+}
+
 .newsItem {
+    margin-top: 10px;
+    border-bottom: solid 1px red;
     display: flex;
-    border-bottom: solid 2px red;
-}
-.newsItemTitle{
-    margin-left: 100px;
-}
-.newsItem {
-    width: 60em;
-    margin-left: 100px;
-}
-		.newsList{
-    display: flex;
-    flex-direction: column;
-    border: solid 1px yellow;
-}
-.ToIchiran{
-    justify-content: right;
-    border: solid 1px red;
 }
 
 .hiduke {
-    width: 30ex;
+    width: 150px;
 }
-.secNews{
-    border: solid 1px lime;
-    display: flex;
-    flex-direction: column;
+
+.newsTitle {
+    width: 500px;
+}
+
+.newsToIchiran {
+    align-items: center;
+    text-align: right;
 }
